further cleanups